WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.4.2-dev, 2013-09-02


This document lists all changes for each version.

For a list of important changes that require manual action, please look at
http://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
(file 'NEWS' in sources).


Version 0.4.2 (under dev!)
--------------------------

* core: display day change message dynamically (do not store it as a line in
  buffer), rename option weechat.look.day_change_time_format to
  weechat.look.day_change_message, new options weechat.look.day_change_message2
  and weechat.color.chat_day_change (task #12775)
* core: add syntax "@buffer:item" in bar items to force the buffer used when
  displaying the bar item (task #12717)
* core: add search of regular expression in buffer, don't reset search type on
  a new search, select where to search (messages/prefixes), add keys in search
  context: alt+"c" (case (in)sensitive search), tab (search in
  messages/prefixes)
* core: add text emphasis in messages when searching text in buffer, new
  options: weechat.look.emphasized_attributes, weechat.color.emphasized,
  weechat.color.emphasized_bg
* core: fix random crash on "/buffer close" with a buffer number (or a range of
  buffers)
* core: optimize the removal of lines in buffers (a lot faster to clear/close
  buffers with lot of lines)
* core: change color format for options weechat.look.buffer_time_format and
  weechat.look.prefix_{action|error|join|network|quit} from `${xxx}` to
  `${color:xxx}`
* core: add secured data (encryption of passwords or private data): add new
  command /secure and new file sec.conf (task #7395)
* core: rename binary and man page from "weechat-curses" to "weechat"
  (task #11027)
* core: disable build of doc by default, add cmake option ENABLE_MAN to compile
  man page (off by default)
* core: add option "-o" for command /color
* core: fix priority of logical operators in evaluation of expression